# local-flow

./: .gitignore  LocalFlow.command  README.md  pyproject.toml
docs/: post-linkedin-2026-07.md  wispr-flow-architecture.md
localflow/: __main__.py  app.py
scripts/: install-launchagent.sh
tasks/: HANDOFF.md  lessons.md  todo.md
tests/: test_fn_listener.py  test_pipeline.py  test_process.py
