[project]
name = "localflow"
version = "0.1.0"
description = "Dictee vocale systeme entiere, 100 % locale et privee (equivalent local de Wispr Flow)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mlx-whisper>=0.4",
    "sounddevice>=0.5",
    "pynput>=1.7",
]

[project.scripts]
localflow = "localflow.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["localflow"]
